--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,14 @@ dependencies {
     //Retrofit XMLConverter
     implementation 'com.squareup.retrofit2:converter-simplexml:2.7.0'
 
-    //cardview
+    //CardView
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     //Universal Image Loader
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    //Coordinator Layout
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 }
